--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
+    <div class="localeDate"></div>
     <div class="clock">
         <span class="hours"></span
         >&nbsp;:&nbsp;<span class="minutes"></span
