--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="nav">
     <ul>
       <li key="0">Change Display</li>
-      <li key="1">Switch Date</li>
+      <li key="1">Switch Mode</li>
     </ul>
   </div>
 
