--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
   </svg>
   <div class="nav">
     <ul>
-      <li key="0">Change Display</li>
+      <li key="0">Show Date</li>
       <li key="1">Switch Mode</li>
     </ul>
   </div>
 
-  <!-- <script src="http://mat1.gtimg.com/libs/jquery/1.12.0/jquery.min.js"></script> -->
-  <script src="script/jquery-3.4.1.min.js"></script>
+  <script src="http://mat1.gtimg.com/libs/jquery/1.12.0/jquery.min.js"></script>
+  <!-- <script src="script/jquery-3.4.1.min.js"></script> -->
   <script src="script/index.js"></script>
 </body>
 
