--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </ul>
   </div>
 
-  <script src="http://mat1.gtimg.com/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://mat1.gtimg.com/libs/jquery/1.12.0/jquery.min.js"></script>
   <!-- <script src="script/jquery-3.4.1.min.js"></script> -->
   <script src="script/index.js"></script>
 </body>
