--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="author" content="clock">
   <title>⏰ clock</title>
-  <link rel="stylesheet" href="style/index.css">
-  <link rel="icon" href="favicon.ico">
+  <link data-trunk rel="css" href="style/index.css">
+  <link data-trunk rel="icon" href="favicon.ico">
 </head>
 
 <body>
-  <div class="localeDate"></div>
+  <!-- <div class="localeDate"></div>
   <div class="clock">
     <span class="hours"></span>&nbsp;:&nbsp;<span class="minutes"></span>&nbsp;:&nbsp;<span class="seconds"></span>
   </div>
@@ -27,11 +27,11 @@
       <li key="0">Show Date</li>
       <li key="1">Switch Mode</li>
     </ul>
-  </div>
+  </div> -->
 
-  <script src="https://mat1.gtimg.com/libs/jquery/1.12.0/jquery.min.js"></script>
+  <!-- <script src="https://mat1.gtimg.com/libs/jquery/1.12.0/jquery.min.js"></script> -->
   <!-- <script src="script/jquery-3.4.1.min.js"></script> -->
-  <script src="script/index.js"></script>
+  <!-- <script src="script/index.js"></script> -->
 </body>
 
 </html>
